<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:ignore="PrivateResource"
    tools:targetApi="lollipop">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/service_report_item_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/service_report_item_padding">

            <TextView
                android:id="@+id/tvCustomerName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/service_report_item_padding"
                android:layout_weight="1"
                android:fontFamily="@font/roboto"
                android:gravity="start"
                android:text="@string/ornek_musteri"
                android:textColor="@color/claret_red"
                android:textSize="@dimen/service_report_item_text_size_big" />

            <TextView
                android:id="@+id/tvUserNameReport"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/service_report_item_padding"
                android:layout_weight="1"
                android:fontFamily="@font/roboto"
                android:gravity="end"
                android:text="@string/ornek_musteri"
                android:textColor="@color/black"
                android:textSize="@dimen/service_report_item_text_size_big" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvServiceCode2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/service_report_item_padding"
            android:layout_marginBottom="@dimen/service_report_item_padding"
            android:fontFamily="@font/roboto"
            android:gravity="start|center_vertical"
            android:text="@string/ornek_service_code"
            android:textColor="@color/black"
            android:textSize="@dimen/service_report_item_text_size_medium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/service_report_item_padding"
            android:paddingBottom="@dimen/service_report_item_padding">

            <TextView
                android:id="@+id/tvServiceStarts"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/roboto"
                android:gravity="start"
                android:text="@string/ornek_tarih"
                android:textColor="@color/black"
                android:textSize="@dimen/service_report_item_text_size_small" />

            <TextView
                android:id="@+id/tvServiceFinishes"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/service_report_item_padding"
                android:layout_weight="2"
                android:fontFamily="@font/roboto"
                android:gravity="end"
                android:text="@string/ornek_tarih_2"
                android:textColor="@color/black"
                android:textSize="@dimen/service_report_item_text_size_small" />

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>